[gd_scene load_steps=9 format=3 uid="uid://bapmn72w0f62v"]

[ext_resource type="Script" path="res://src/player.gd" id="1_a45wv"]
[ext_resource type="PackedScene" uid="uid://mqxffdrpghdb" path="res://src/health_bar.tscn" id="2_mftkb"]
[ext_resource type="Texture2D" uid="uid://c32yxc45rnvnm" path="res://img/duck.png" id="3_gtx5l"]
[ext_resource type="PackedScene" uid="uid://bc35mh3cchynq" path="res://src/gun.tscn" id="3_tg4wh"]

[sub_resource type="Animation" id="Animation_3y4jt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lgy3n"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foncx"]
_data = {
"RESET": SubResource("Animation_3y4jt"),
"Walk": SubResource("Animation_lgy3n")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_onybv"]
radius = 64.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 48
script = ExtResource("1_a45wv")

[node name="HealthBar" parent="." instance=ExtResource("2_mftkb")]
offset_left = -48.0
offset_top = -212.0
offset_right = -8.0
offset_bottom = -172.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-14, -62)
scale = Vector2(1.34708, 1.2473)
texture = ExtResource("3_gtx5l")
hframes = 4
region_rect = Rect2(35.198, 0, 227.786, 144)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_foncx")
}
autoplay = "Walk"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("CircleShape2D_onybv")
debug_color = Color(0.842909, 0.380623, 5.77569e-07, 0.42)

[node name="GunMarker" type="Marker2D" parent="."]
position = Vector2(-10, -36)

[node name="Gun" parent="GunMarker" instance=ExtResource("3_tg4wh")]
position = Vector2(0, 0)
kind = 0

[node name="CameraSetter" type="RemoteTransform2D" parent="."]
